--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "node": ">=7.6"
   },
   "scripts": {
-    "start": "node app.js"
+    "start": "nodemon app.js"
   },
   "dependencies": {
     "express": "4.15.3",
