--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "node": ">=7.6"
   },
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon src/app.js"
   },
   "dependencies": {
+    "bcrypt": "^3.0.6",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "4.15.3",
+    "joi": "^14.3.1",
+    "morgan": "^1.9.1",
     "nodemon": "^1.19.1",
     "socket.io": "2.0.3"
   }
